Fixed responsiveness issues
Fixed settings menu not responsive.
Fixed ui breaks in Galaxy Fold Screen size.

--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ body {
 
 .menu-content {
   max-width: 500px;
-  max-height: 600px;
+  max-height: 610px;
   width: 100%;
   height: 100%;
   overflow-y: auto;
@@ -179,15 +179,21 @@ body {
 .menu-buttons {
   display: flex;
   justify-content: flex-end;
-  gap: 20px;
+  flex-wrap: wrap-reverse;
+  column-gap: 20px;
   margin-top: auto;
+  padding-top: 30px;
 }
+
+.menu-buttons > .settings-option {
+  width: 29%;
+} 
 
 .bg-not-filled-button,
 .bg-filled-button {
   border: var(--secondary-color, #b999a3) solid 2px;
   padding: 5px;
-  width: 100px;
+  width: 100%;
   border-radius: 5px;
   font-size: 1.03rem;
 }
@@ -300,10 +306,33 @@ body {
     bottom: 20px;
     right: 20px;
   }
+  .menu-content {
+    max-width: unset;
+    max-height: unset;
+    border-radius: 0px;
+  }
+}
+
+@media (max-width: 440px) {
+  .menu-buttons > .settings-option {
+    width: 100%;
+  }
 }
 
 @media (max-width: 400px) {
   .timer {
     font-size: 6rem;
+  }
+}
+
+@media (max-width: 330px) {
+  .bottom-left-texts {
+    flex-direction: column;
+  }
+  .top-section {
+    flex-direction: column;
+  }
+  .timer {
+    font-size: 5rem;
   }
 }
